--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ build/
 
 ### VS Code ###
 .vscode/
-#application.properties
+application.properties
+application-dev.properties
+secret.properties
 #data.sql
 .env
