--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,13 @@
             <version>4.10.3</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.5.0</version>
+        </dependency>
+
 
     </dependencies>
 
