--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ build/
 
 ### VS Code ###
 .vscode/
-#application.properties
+application.properties
 application-dev.properties
 secret.properties
 data.sql
