--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,13 @@
             <version>4.5.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>3.5.5</version>
+        </dependency>
+
 
     </dependencies>
 
